<resources>
    <string name="app_name">Онлайн-заявки студентов ГАПОУ СО «АМТ»</string>
    <string name="specifyLastName">Необходимо указать фамилию</string>
    <string name="specifyName">Необходимо указать имя</string>
    <string name="specifyPatronymic">Необходимо указать отчество</string>
    <string name="specifyPhoneNumber">Необходимо указать номер телефона</string>
    <string name="specifyEmail">Необходимо указать электронную почту</string>
    <string name="confirmDataCorrectness">Необходимо подтвердить правильность введенных данных</string>
    <string name="acceptPersonalDataProcessing">Необходимо дать согласие на обработку персональных данных</string>
    <string name="iAmNotRobot">Подтвердите, что Вы не робот</string>
    <string name="studyPlaceCertificate">Справка с места учебы (для\u00A0подтверждения факта обучения)</string>
    <string name="personalData">Персональные данные</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="phone">Номер телефона</string>
    <string name="email">Электронная почта</string>
    <string name="serviceInformationRequired">Информация к услуге</string>
    <string name="course">Курс</string>
    <string name="groupNumber">Номер группы</string>
    <string name="copiesNumber">Количество копий справки (не более двух)</string>
    <string name="isCorrect">Я подтверждаю правильность введенных мною данных</string>
    <string name="iAgree">Я принимаю <a href="https://www.consultant.ru/document/cons_doc_LAW_61801/">условия обработки персональных данных</a></string>
    <string name="iAmNotRobotTextView">Я не робот</string>
    <string name="send">ОТПРАВИТЬ</string>
    <string name="urlStudyPlace">https://script.google.com/macros/s/AKfycby60gKAZdcgjXbK3G3aijKIWzwfC6DXp58KXJugWm4oq3L1rSt9X6wbGvqbMAuJgWuC/exec</string>
    <string name="urlScholarship">https://script.google.com/macros/s/AKfycbwsfgYhOeShgVv8hQ0bjmXVDQbsSgYmBq-MQd1-kEPOe5PR9bFOxvWqGD6zDtidJM3Arw/exec</string>
    <string name="urlInvocation">https://script.google.com/macros/s/AKfycbxGXg_KpAzw5WnEutnxRFmxrpzxU0LFKgqOb9rasqXXSzElcPMV7R3aBW8XgUO7-tQk/exec</string>
    <string name="testRecaptcha">TESTRECAPTCHA</string>
    <string name="siteKey">6LdgeoopAAAAAGCF5PNXtreKjuFEZ9zUmfTI94ks</string>
    <string name="available">Можно подать заявку на следующие справки</string>
    <string name="findMe">Если у Вас возникли вопросы, свяжитесь со мной</string>
    <string name="vk"><a href="https://vk.me/id533512555/">Vk</a></string>
    <string name="telegram"><a href="https://t.me/username17534789036">Telegram</a></string>
    <string name="findMeEmail"><a href="mailto:rerbi007@gmail.com">Email</a></string>
    <string name="findMePhone">+79120435359</string>
    <string-array name="course">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="numberOfCopies">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="groupNumbers">
        <item>101 МК</item>
        <item>104 ИСП</item>
        <item>104 СР</item>
        <item>104 Т</item>
        <item>105 ИСП</item>
        <item>106 ИСП</item>
        <item>106 КР</item>
        <item>111 Ф</item>
        <item>114 ДОШ</item>
        <item>118 С</item>
        <item>120 К</item>
        <item>138 ЭО</item>
        <item>194 ОП</item>
        <item>197 П</item>
        <item>204 ИСП</item>
        <item>204 МСС</item>
        <item>204 СР</item>
        <item>205 КР</item>
        <item>211 Ф</item>
        <item>214 ДОШ</item>
        <item>214 ТС</item>
        <item>237 ЭО</item>
        <item>292 ОП</item>
        <item>293 ОП</item>
        <item>296 П</item>
        <item>302 ИСП</item>
        <item>303 ИСП</item>
        <item>303 МСС</item>
        <item>303 Т</item>
        <item>304 ИСП</item>
        <item>310 ЗАФК</item>
        <item>311 Ф</item>
        <item>313 ТС</item>
        <item>314 ДОШ</item>
        <item>317 С</item>
        <item>336 ЭО</item>
        <item>391 ОП</item>
        <item>395 П</item>
        <item>402 Т</item>
        <item>403 ИСП</item>
        <item>403 ТП</item>
        <item>404 СР</item>
        <item>411 Ф</item>
        <item>412 ТС</item>
        <item>414 ДОШ</item>
        <item>423 А</item>
        <item>435 ЭО</item>
        <item>490 ОП</item>
        <item>494 П</item>
    </string-array>
</resources>