<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InvocationActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include
            layout="@layout/reusable_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="?attr/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="Поддержка, отзывы, обратная связь"
                android:textSize="28sp" />

            <TextView
                style="?attr/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/findMe" />

            <TextView
                android:id="@+id/findMeVk"
                style="?attr/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vk" />

            <TextView
                android:id="@+id/findMeTelegram"
                style="?attr/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telegram" />

            <TextView
                android:id="@+id/findMeEmail"
                style="?attr/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/findMeEmail" />

            <TextView
                android:autoLink="phone"
                android:id="@+id/findMePhone"
                style="?attr/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/findMePhone" />

            <TextView
                style="?attr/textViewStyle"
                android:justificationMode="inter_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Мобильное приложение разработал\nШипицын Александр Павлович, студент группы 403ИСП в рамках выполнения дипломного проекта" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>