<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="?attr/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/serviceInformationRequired"
        android:textSize="24sp" />

    <TextView
        style="?attr/textViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/course"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/courseSpinner"
        style="?attr/spinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/course"
        android:minWidth="150dp"
        android:minHeight="48dp" />

    <TextView
        style="?attr/textViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/groupNumber"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/groupSpinner"
        style="?attr/spinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/groupNumbers"
        android:minWidth="150dp"
        android:minHeight="48dp" />

</LinearLayout>